<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="net.xisberto.phonetodesktop.WelcomeFragment" >

        <TextView
            android:id="@+id/txt_authorize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_authorize"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/btn_authorize"
            style="@style/Theme.PhoneToDesktop.HomeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_authorize" />

        <TextView
            android:id="@+id/txt_how_works"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_tutorial"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/btn_how_it_works"
            style="@style/Theme.PhoneToDesktop.HomeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_how_it_works" />
    </LinearLayout>

</ScrollView>