<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="4dp"
    tools:context=".AdvancedTaskFragment" >

    <TextView
        android:id="@+id/title_preview"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_preview" />

    <FrameLayout
        android:id="@+id/scrollViewPreview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp" >

        <ScrollView
            style="@style/Theme.PhoneToDesktop.PreviewText"
            android:layout_width="match_parent"
            android:layout_height="96dp" >

            <TextView
                android:id="@+id/text_preview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp" />
        </ScrollView>

        <ProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:padding="16dp"
            android:visibility="gone" />
    </FrameLayout>

    <TextView
        android:id="@+id/title_options"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_options" />

    <ScrollView
        android:id="@+id/scroll_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/cb_only_links"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/txt_only_links" />

            <CheckBox
                android:id="@+id/cb_unshorten"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/txt_unshorten" />

            <CheckBox
                android:id="@+id/cb_get_titles"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/txt_get_titles" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>