<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="4dp"
    android:paddingRight="4dp"
    tools:context=".AdvancedTaskFragment" >

    <TextView
        android:id="@+id/title_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/txt_preview"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ScrollView
        android:id="@+id/scrollViewPreview"
        style="@style/AppTheme.PreviewText"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/title_preview" >

            <TextView
                android:id="@+id/text_preview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp" />
    </ScrollView>

    <CheckBox
        android:id="@+id/cb_only_links"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/scrollViewPreview"
        android:text="@string/txt_only_links" />

    <CheckBox
        android:id="@+id/cb_unshorten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/cb_only_links"
        android:text="@string/txt_unshorten" />

    <CheckBox
        android:id="@+id/cb_get_titles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/cb_unshorten"
        android:text="@string/txt_get_titles" />

    <View 
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:background="@android:color/darker_gray"
        android:layout_above="@+id/buttonbar"/>
    <LinearLayout
        android:id="@+id/buttonbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ButtonBar"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" >

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/ButtonBarButton"
            android:text="@android:string/cancel" />
        
        <Button
            android:id="@+id/btn_send"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/ButtonBarButton"
            android:text="@string/send" />
    </LinearLayout>

</RelativeLayout>